style.css
header {
    margin: 0;
    font-size: 1.5rem;  
    font-weight: 300;    
    letter-spacing: 4px; 
    text-align: center;
    padding-top: 60px;
    padding-bottom: 30px;
}

header h1 {
    text-transform: uppercase;
    font-size: 3rem;
}

header h3 {
    font-size: 1.25rem;
    font-weight: 400;
    color: #94a3b8; 
}


a {
    color: #91caff;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
    color: #ffffff;
}

html, body {
    height: 100%;
    min-width: 320px;
    margin: 0;
    padding: 0;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    background-color: #0f172a;
    color: #e2e8f0; /* off white */
}

h2 { /* Making all the question wrap nicely instead of underneath the question number*/
    color: #38bdf8;
    font-weight: 700;
    font-size: 1.4em;
    padding-left: 30px;   /* space for the number */
    text-indent: -30px;   /* pulls the number back */
}

main {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 100px;
    margin-left: 20px; /*Indent all main section text by 20 pixels to make it look prettier*/
    max-width: 1000px;   /* limits width */
    margin: 0 auto;     /* centers horizontally */
    line-height: 1.3;
    padding: 20px;
}

p {
    word-wrap:break-word; /* Make it so the text wraps rather than go on forever*/
    white-space: normal;
}

section {
    margin-bottom: 60px;
    padding: 25px;
    border-radius: 10px;
    background-color: #1e293b;
}

.answer {
    margin-left: 20px; /* Indent all the answers by 40 pixels */
    padding-left: 20px;
    border-left: 2px solid rgba(148, 163, 184, 0.3);
}

ul li { /* Fixing spacing between each list item to improve readability*/
    margin-bottom: 10px;
}

footer { /*Making the footer empty. Making the page look a bit more polished*/
    min-height: 90px;              /* Height of the footer */
}

